[package]
name = "archiva-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tower-http = "0.6.6"
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4.0"
ratatui = "0.29.0"
crossterm = "0.29.0"
